# terrain_generator

./: CMakeLists.txt  README.md  imgui.ini
cmake/: FindGLFW3.cmake
include/: noise.h  perlin_noise.h
res/shaders/: basic.shader
src/: cube.cpp  cube.h  index_buffer.cpp  index_buffer.h  main.cpp  perlin_noise.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/tests/: test.cpp  test.h  test_clear_color.cpp  test_clear_color.h  test_texture_2d.cpp  test_texture_2d.h
